some fixes and image cropper

--- a/asset/assets/css/style.css
+++ b/asset/assets/css/style.css
@@ -520,7 +520,7 @@ p {
 }
 
 .modal {
-    z-index: 99999999999
+    z-index: 999999999;
 }
 
 .bd-example .modal {
